# calculator-2

./: .gitignore  CMakeLists.txt
include/: calculator.h
src/: calculator.cpp  main.cpp
